# tomo

./: .gitattributes  .gitignore  Cargo.toml  README.md  biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: error.rs  facade.rs  lib.rs
crates/core/src/asserts/: mod.rs
crates/core/src/curl/: export.rs  import.rs  mod.rs
crates/core/src/format/: de.rs  mod.rs  sync.rs  value.rs  write.rs
crates/core/src/fsops/: atomic.rs  gitignore.rs  mod.rs  ops.rs  scan.rs  slug.rs
crates/core/src/http/: auth.rs  build.rs  capture.rs  client.rs  cookies.rs  digest.rs  engine.rs  mod.rs  oauth2.rs  resolve.rs
crates/core/src/model/: auth.rs  body.rs  collection.rs  environment.rs  mod.rs  request.rs  response.rs  settings.rs
crates/core/src/script/: engine.rs  mod.rs  prelude.js
crates/core/src/vars/: dotenv.rs  dynamic.rs  interpolate.rs  mask.rs  mod.rs  path.rs  scope.rs
crates/core/src/watch/: mod.rs
crates/core/tests/: auth_suite.rs  curl_suite.rs  format_roundtrip.rs  fsops_suite.rs  http_suite.rs  script_suite.rs  spike_boa.rs  spike_toml.rs  tls_suite.rs  vars_suite.rs
crates/core/tests/fixtures/: client_cert.pem  client_key.pem
crates/core/tests/snapshots/: format_roundtrip__canonical_request_snapshot.snap  format_roundtrip__collection_snapshot_and_roundtrip.snap  format_roundtrip__folder_and_environment_roundtrip.snap  format_roundtrip__secrets_snapshot_and_roundtrip.snap
docs/: format.md
e2e/: shell.spec.ts
scripts/: check.sh  setup-linux.sh
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dto.rs  error.rs  lib.rs  main.rs  state.rs  watchbridge.rs
src/app/: App.tsx  Gallery.tsx  Shell.tsx  Titlebar.tsx
src/components/ui/: ErrorBoundary.tsx  badge.tsx  button.tsx  code-editor.tsx  dialog.tsx  empty-state.tsx  icon-button.tsx  input.tsx  kbd.tsx  menu.tsx  method-badge.tsx  select.tsx  spinner.tsx  status-pill.tsx  switch.tsx  tabs.tsx  toast.tsx  tooltip.tsx
src/features/environments/: EnvironmentsModal.test.ts  EnvironmentsModal.tsx
src/features/palette/: CommandPalette.tsx
src/features/request/: KeyValueEditor.tsx  RequestPane.tsx  tabs.tsx
src/features/response/: ResponsePane.tsx
src/features/settings/: AboutModal.tsx  SettingsModal.tsx
src/features/sidebar/: Sidebar.tsx
src/features/sidebar/tree/: Tree.tsx  flatten.ts  reorder.test.ts  reorder.ts
src/features/tabs/: DirtyCloseDialog.tsx  TabStrip.tsx
src/i18n/: i18n.test.ts  index.ts
src/i18n/messages/: en.ts  pt-BR.ts
src/lib/: cn.ts
src/lib/codemirror/: theme.ts  variables.ts
src/lib/keys/: keymap.ts
src/lib/transport/: contract.ts  index.ts  mock.ts  tauri.ts
src/stores/: collections.ts  environments.ts  reconcile.test.ts  responses.ts  settings.test.ts  settings.ts  tabs.test.ts  tabs.ts  ui.ts
src/stores/actions/: fs-actions.ts  request-actions.ts  tab-actions.ts
src/styles/: base.css  tokens.css
src/test/: setup.ts
