[package]
name = "tomo"
description = "Tomo — a friendly, TOML-native API client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "tomo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tomo-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
lru = { workspace = true }
dunce = { workspace = true }
blake3 = { workspace = true }
