[package]
name = "tomo"
description = "Tomo — a friendly, TOML-native API client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "tomo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tomo-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
lru = { workspace = true }
dunce = { workspace = true }
blake3 = { workspace = true }
trash = "5.2.6"

[dev-dependencies]
tempfile = { workspace = true }

# `test` enables tauri::test (MockRuntime) for the IPC integration tests. Scoped
# to non-Windows: there the `test` feature makes the tomo_lib test binary fail to
# load (STATUS_ENTRYPOINT_NOT_FOUND at startup, before any test runs), so the
# MockRuntime IPC tests are `cfg(not(windows))` too. As a dev-dependency it is
# active only under `cargo test`, never in the release build; the IPC wire
# contract is platform-independent, so Ubuntu coverage is sufficient.
[target.'cfg(not(windows))'.dev-dependencies]
tauri = { version = "2", features = ["test"] }
