[package]
name = "tomo-core"
description = "Pure core logic for the Tomo API client: TOML format, variables, HTTP engine, scripting"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
toml_edit = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
deunicode = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }
dunce = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
dotenvy = { workspace = true }
rquickjs = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
encoding_rs = { workspace = true }
mime = { workspace = true }
cookie_store = { workspace = true }
cookie = { workspace = true }
digest_auth = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
shell-words = { workspace = true }
url = { workspace = true }
percent-encoding = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
pretty_assertions = { workspace = true }
wiremock = { workspace = true }
flate2 = { workspace = true }
